crates/compiler/tests/parse_errors/type_name.elm
module Main exposing (..)
type = A
